# laboratorio-programmazione

./: CMakeLists.txt  IniParser.cpp  IniParser.h  README.md  main.cpp  test.cpp  test.ini
test/: CMakeLists.txt  iniParserTest.cpp
